# sb_project

./: .gitattributes  .gitignore  pyproject.toml
data/: df_complete.csv
sb_project/: LogisticRegression.ipynb  NeuralNetworks.py  REPORT.ipynb  REPORT_nn.ipynb  calc_features.py  data_extraction.ipynb  predictor.ipynb  predictor_DAUG.ipynb  predictor_anto.ipynb  prof_calc_features.py  prof_classifier.ipynb
tests/: calc_features_test.py
