[tool.poetry]
name = "sb-project"
version = "0.1.0"
description = ""
authors = ["Mattia Piazza <mattiapiazza@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ipykernel = "^6.29.4"
numpy = "^1.26.4"
pandas = "^2.2.2"
scikit-learn = "^1.5.0"
torch = "^2.3.0"
hiddenlayer = "^0.3"
matplotlib = "^3.9.0"


[tool.poetry.group.dev.dependencies]
rich = "^13.7.1"
ruff = "^0.4.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
