[tool.poetry]
name = "sb-project"
version = "0.1.0"
description = ""
authors = ["Mattia Piazza <mattiapiazza@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ipykernel = "^6.29.4"
numpy = "^1.26.4"
pandas = "^2.2.2"
scikit-learn = "^1.5.0"
torch = "^2.3.0"
hiddenlayer = "^0.3"
matplotlib = "^3.9.0"
torchview = "^0.2.6"
graphviz = "^0.20.3"
biopython = "^1.83"
scipy = "^1.13.1"
seaborn = "^0.13.2"
torchinfo = "^1.8.0"
skorch = "^1.0.0"
datasets = "^2.20.0"
torchdata = "^0.7.1"
torchtext = "^0.18.0"
torchvision = "^0.18.1"
portalocker = "^2.8.2"


[tool.poetry.group.dev.dependencies]
rich = "^13.7.1"
ruff = "^0.4.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
